# base-fast-sqla

./: README.md  compose.yaml  pyproject.toml
src/: __init__.py  authentication.py  db.py  main.py  models.py  settings.py
